fix : [011test] : 전체 테스트 점검 및 서비스 흐름도 추가